syntax = "proto3";
package patient;

import "google/protobuf/empty.proto";

service PatientService {
    rpc ListPatients (google.protobuf.Empty) returns (PatientsReply);
    rpc CreatePatient (CreatePatientRequest) returns (CreatePatientReply);
}

message Patient {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
}

message CreatePatientRequest {
    string first_name = 1;
    string last_name = 2;
}

message CreatePatientReply {
    string message = 1;
}

message PatientsReply {
    repeated Patient patients = 1;
}